--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                          <div>
                              <div class="block-price">
                                  <span class="name-value">USD/UAH</span>
+                                 <div>dhfjsdfhsdf</div>
                                  <div class="first-currency"></div>
                                  <div class="second-currency"></div>
                              </div>
