--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <script defer src="js/script.js"></script>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+ 
+    ym(72057934, "init", {
+         clickmap:true,
+         trackLinks:true,
+         accurateTrackBounce:true,
+         webvisor:true
+    });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/72057934" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
     <title>Курс Валют</title>
 </head>
 <body>
@@ -41,7 +56,6 @@
                          <div>
                              <div class="block-price">
                                  <span class="name-value">USD/UAH</span>
-                                 <div>dhfjsdfhsdf</div>
                                  <div class="first-currency"></div>
                                  <div class="second-currency"></div>
                              </div>
