--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <script defer src="js/script.js"></script>
-    <script type='text/javascript'>
-        window.smartlook||(function(d) {
-          var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
-          var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
-          c.charset='utf-8';c.src='https://rec.smartlook.com/recorder.js';h.appendChild(c);
-          })(document);
-          smartlook('init', '2c683eb2f4d4353353c61aab53cc7352728ba3f1');
-      </script>
+    <script src="https://cdn.lr-ingest.io/LogRocket.min.js" crossorigin="anonymous"></script>
+    <script>window.LogRocket && window.LogRocket.init('u4q78m/kurs');</script>
     <title>Курс Валют</title>
 </head>
 <body>
